--- a/css/index-css.css
+++ b/css/index-css.css
@@ -58,8 +58,27 @@ body{
         .topo-menu .info-menu{
             display: flex;
             padding: 14px;
-            margin-left: 6px;
+            margin-left: 4px;
             font-size: 8px;
+            color: #fff;
+        }
+        .topo-menu .info-menu p{
+          font-size: 8px;
+          margin-top: 2.8px;
+          font-weight: bold;
+          text-transform: uppercase;
+        }
+        .topo-menu .info-menu span{
+          margin-left: 8px;
+          margin-top: 2px;
+        }
+      }
+      @media(max-width: 700px){
+        .topo-menu .info-menu{
+            display: flex;
+            padding: 14px;
+            margin-left: 6px;
+            font-size: 9px;
             color: #fff;
         }
         .topo-menu .info-menu p{
