--- a/css/index-css.css
+++ b/css/index-css.css
@@ -68,9 +68,12 @@ body{
           font-weight: bold;
           text-transform: uppercase;
         }
+        .topo-menu .info-menu img{
+          margin-left: 15px;
+        }
         .topo-menu .info-menu span{
           margin-left: 5px;
-          margin-top: 1px;
+          margin-top: 3px;
         }
       }
    /* INFORMAÇÕES DE AJUDA */
