--- a/css/index-css.css
+++ b/css/index-css.css
@@ -236,14 +236,14 @@ body{
       }
       .banner .banner-text h1{
         font-size: 60px;
-        margin-top: 70px;
+        margin-top: 80px;
         color: #ffffff;
         text-align: center;
       }
       .banner .banner-text p{
         font-size: 22px;
         color: #ffffffb7;
-        font-weight: lighter;
+        font-weight: 400;
         margin: 25px 0;
       }
      }
