--- a/css/index-css.css
+++ b/css/index-css.css
@@ -244,6 +244,7 @@ body{
         font-size: 22px;
         color: #ffffffb7;
         font-weight: 400;
+        font-family: 'Glacial Indifference', sans-serif;
         margin: 12px 0;
       }
      }
