--- a/css/index-css.css
+++ b/css/index-css.css
@@ -132,7 +132,7 @@ body{
     .head-menu .navbar ul li:hover > ul,
     .head-menu .navbar ul li:focus-within > ul {
       display: initial;
-      animation: slide-down 0.5s ease-in-out;
+      animation: slide-down 0.4s ease-in-out;
     }
     .head-menu .navbar ul li ul li a:hover{
       color: #0368ec;
@@ -211,19 +211,19 @@ body{
       justify-content: center;
     }
     .banner .banner-text{
-      margin: 225px;
+      margin: 240px;
       text-align: center;
       padding: 0 1px;
     }
     .banner .banner-text h1{
       font-size: 95px;
-      margin-top: 40px;
+      margin-top: 45px;
       color: #ffffff;
       text-align: center;
       white-space: nowrap;
     }
     .banner .banner-text p{
-      font-size: 18px;
+      font-size: 23px;
       color: #ffffffb7;
       font-weight: 350;
       text-transform: uppercase;
@@ -252,3 +252,107 @@ body{
   /* -------------------OFF BANNER------------------- */
 
 /* -------------------OFF CABEÇALHO DO SITE------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* RODAPÉ DO SITE */
+  footer{
+    width: 100%;
+    color: #ffffff;
+  }
+  #footer-content{
+    background: #1e6ed6;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    padding: 3rem 3.5rem;
+  }
+  #footer-content h1{
+    margin-bottom: 0.75rem;
+  }
+  #footer-social-midia{
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+  }
+  #instagram{
+    background: #ffffff;
+    padding: 6px 7px;
+    border-radius: 50%;
+    transition: 0.4s ease-in-out;
+  }
+  #instagram img{
+    width: 26px;
+  }
+  #instagram:hover{
+    background: #ffffff;
+    border-radius: 25%;
+  }
+  #footer-social-midia .footer-link{
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+  .footer-list{
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+  }
+  .footer-list .footer-link{
+    color: #dad6d6;
+    transition: 0.2s ease-in-out;
+  }
+  .footer-list .footer-link:hover{
+    color: #eee;
+  }
+  .footer-list #list-margin{
+    margin-top: 10px;
+  }
+  .footer-list #li-dif{
+    color: #dad6d6;
+  }
+  #footer-copyright{
+    display: block;
+    justify-content: center;
+    background: #1e6ed6;
+    font-size: 0.9rem;
+    padding: 1rem;
+    font-weight: 200;
+  }
+  #footer-copyright img{
+    width: 120px;
+    margin-left: 36rem;
+  }
+  #footer-copyright p{
+    font-size: 10px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 3rem;
+  }
+  #footer-copyright #dev{
+    margin-top: 1rem;
+  }
+  @media(max-width: 720px){
+    #footer-content{
+      grid-template-columns: repeat(1,1fr);
+      gap: 3.5rem;
+    }
+    .footer-list #list-margin{
+      margin-top: 2rem;
+    }
+    #footer-copyright img{
+      width: 120px;
+      margin-left: 9rem;
+    }
+  }
+/* OFF RODAPÉ DO SITE */
