--- a/css/index-css.css
+++ b/css/index-css.css
@@ -7,9 +7,10 @@
     outline: none;
     font-family: 'Inter', sans-serif;
 }
-body{
-    height: 200vh;
-}
+/* -------------------AVISO COOKIES------------------- */
+.cookieConsentContainer{border-radius:20px;;z-index:999;width:350px;min-height:20px;box-sizing:border-box;padding:30px 30px 30px 30px;background:#232323;overflow:hidden;position:fixed;bottom:30px;right:30px;display:none}.cookieConsentContainer .cookieTitle a{font-family:OpenSans,arial,sans-serif;color:#fff;font-size:22px;line-height:20px;display:block}.cookieConsentContainer .cookieDesc p{margin:0;padding:0;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:13px;line-height:20px;display:block;margin-top:10px}.cookieConsentContainer .cookieDesc a{font-family:OpenSans,arial,sans-serif;color:#fff;text-decoration:underline}.cookieConsentContainer .cookieButton a{border-radius:20px;display:inline-block;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:14px;font-weight:700;margin-top:14px;background:#000;box-sizing:border-box;padding:15px 24px;text-align:center;transition:background .3s}.cookieConsentContainer .cookieButton a:hover{cursor:pointer;background:#3e9b67}@media (max-width:980px){.cookieConsentContainer{bottom:0!important;left:0!important;width:100%!important}}
+/* -------------------OFF AVISO COOKIES------------------- */
+
 /* -------------------CABEÇALHO DO SITE------------------- */
 
   /* -------------------INFORMAÇÕES DE AJUDA------------------- */
@@ -253,6 +254,32 @@ body{
 
 /* -------------------OFF CABEÇALHO DO SITE------------------- */
 
+/* -------------------ULTIMAS NOTICIAS------------------- */
+  .noticias{
+    width: 100%;
+    padding: 6rem 0rem 5rem 0rem;
+    text-align: center;
+    justify-content: center;
+  }
+  .noticias .name-noticias h2{
+    font-size: 35px;
+    color: #004aad;
+  }
+  .noticias .name-noticias .name-traco{
+    margin-left: 43%;
+    margin-top: 0.5rem;
+    width: 12rem;
+    border: 2px solid #1e6ed6;
+    margin-bottom: 20px;
+  }
+    @media(max-width: 800px){
+      .noticias .name-noticias .name-traco{
+        margin-left: 30%;
+      }
+    }
+  
+  
+/* -------------------OFF ULTIMAS NOTICIAS------------------- */
 
 
 
@@ -263,9 +290,7 @@ body{
 
 
 
-
-
-/* RODAPÉ DO SITE */
+/* -------------------RODAPÉ DO SITE------------------- */
   footer{
     width: 100%;
     color: #ffffff;
@@ -355,4 +380,4 @@ body{
       margin-left: 9rem;
     }
   }
-/* OFF RODAPÉ DO SITE */
+/* -------------------OFF RODAPÉ DO SITE------------------- */
