--- a/css/index-css.css
+++ b/css/index-css.css
@@ -8,7 +8,7 @@
     font-family: 'Inter', sans-serif;
 }
 /* -------------------AVISO COOKIES------------------- */
-.cookieConsentContainer{border-radius:20px;;z-index:999;width:350px;min-height:20px;box-sizing:border-box;padding:30px 30px 30px 30px;background:#232323;overflow:hidden;position:fixed;bottom:30px;right:30px;display:none}.cookieConsentContainer .cookieTitle a{font-family:OpenSans,arial,sans-serif;color:#fff;font-size:22px;line-height:20px;display:block}.cookieConsentContainer .cookieDesc p{margin:0;padding:0;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:13px;line-height:20px;display:block;margin-top:10px}.cookieConsentContainer .cookieDesc a{font-family:OpenSans,arial,sans-serif;color:#fff;text-decoration:underline}.cookieConsentContainer .cookieButton a{border-radius:20px;display:inline-block;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:14px;font-weight:700;margin-top:14px;background:#000;box-sizing:border-box;padding:15px 24px;text-align:center;transition:background .3s}.cookieConsentContainer .cookieButton a:hover{cursor:pointer;background:#3e9b67}@media (max-width:980px){.cookieConsentContainer{border-radius:0px;bottom:0!important;left:0!important;width:100%!important}}
+.cookieConsentContainer{border-radius:20px;;z-index:999;width:350px;min-height:20px;box-sizing:border-box;padding:30px 30px 30px 30px;background:#232323;overflow:hidden;position:fixed;bottom:30px;right:30px;display:none}.cookieConsentContainer .cookieTitle a{font-family:OpenSans,arial,sans-serif;color:#fff;font-size:22px;line-height:20px;display:block}.cookieConsentContainer .cookieDesc p{margin:0;padding:0;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:13px;line-height:20px;display:block;margin-top:10px}.cookieConsentContainer .cookieDesc a{font-family:OpenSans,arial,sans-serif;color:#fff;text-decoration:underline}.cookieConsentContainer .cookieButton a{border-radius:20px;display:inline-block;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:14px;font-weight:700;margin-top:14px;background:#000;box-sizing:border-box;padding:15px 24px;text-align:center;transition:background .3s}.cookieConsentContainer .cookieButton a:hover{cursor:pointer;background:#3e9b67}@media (max-width:980px){.cookieConsentContainer{border-radius:0;bottom:0!important;left:0!important;width:100%!important}}
 /* -------------------OFF AVISO COOKIES------------------- */
 
 /* -------------------CABEÇALHO DO SITE------------------- */
@@ -272,13 +272,110 @@
     border: 2px solid #1e6ed6;
     margin-bottom: 20px;
   }
-    @media(max-width: 800px){
+    @media(max-width: 720px){
       .noticias .name-noticias .name-traco{
         margin-left: 30%;
       }
     }
-  
-  
+    @media(max-width: 720px){
+      .org{
+        flex-direction: column;
+        margin-left: 50px;
+      }
+    }
+  .org{
+    display: flex;
+    justify-content: center;
+  }
+  .container-noticias{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4rem;
+    padding: 2rem;
+  }
+  .card-noticia{
+    width: 330px;
+    min-height: 420px;
+    text-align: left;
+    position: relative;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: 400ms ease-in-out transform;
+  }
+  .top{
+    width: 100%;
+    height: 280px;
+    transition: 400ms ease-in-out height;
+  }
+  .container-noticias .card-noticia img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .bottom{
+    position: absolute;
+    bottom: 0;
+    padding: 1.5rem 1rem;
+  }
+  .card-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 400ms ease-in-out opacity;
+  }
+  .category{
+    background: #1e6ed6;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    padding: 0.3rem 1rem;
+  }
+  .date{
+    margin-left: 120px;
+  }
+  .title{
+    margin-top: 1rem;
+    color: rgba(0, 0, 0, .8);
+    position: relative;
+    z-index: 2;
+    transition: 400ms ease-in-out color,
+                400ms ease-in-out transform,
+  }
+  .blog-author{
+    margin: 0.5rem 0;
+    color: rgba(0, 0, 0, .7);
+    transition: 400ms ease-in-out opacity;
+  }
+  .bcg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgba(0,0,0,.7), transparent);
+    opacity: 0;
+    pointer-events: none;
+    transition: 400ms ease-in-out opacity;
+  }
+  .card-noticia:hover{
+    transform: scale(1.01);
+  }
+  .card-noticia:hover .top{
+    height: 100%;
+  }
+  .card-noticia:hover .bottom .card-info,
+  .card-noticia:hover .bottom .blog-author{
+    pointer-events: none;
+    opacity: 0;
+  }
+  .card-noticia:hover .title{
+    opacity: 0;
+    transform: translateY(5%);
+  }
+  .card-noticia:hover .bcg{
+    opacity: 1;
+  }
 /* -------------------OFF ULTIMAS NOTICIAS------------------- */
 
 
