--- a/css/index-css.css
+++ b/css/index-css.css
@@ -274,11 +274,14 @@
   }
     @media(max-width: 720px){
       .noticias .name-noticias .name-traco{
-        margin-left: 30%;
+        margin-left: 25%;
       }
       .org{
         flex-direction: column;
-        margin-left: 30px;
+        margin-left: 20px;
+      }
+      .date{
+        margin-left: 100px;
       }
     }
     @media(max-width: 1000px){
