--- a/css/index-css.css
+++ b/css/index-css.css
@@ -479,5 +479,8 @@
       width: 120px;
       margin-left: 9rem;
     }
+    #footer-copyright p{
+      margin-left: 2rem;
+    }
   }
 /* -------------------OFF RODAPÉ DO SITE------------------- */
