--- a/css/index-css.css
+++ b/css/index-css.css
@@ -259,6 +259,7 @@
     width: 100%;
     padding: 4.5rem 0rem 5rem 0rem;
     text-align: center;
+    align-items: center;
     justify-content: center;
   }
   .noticias .name-noticias h2{
@@ -282,6 +283,11 @@
       }
       .date{
         margin-left: 100px;
+      }
+    }
+    @media(max-width: 1000px){
+      .noticias .name-noticias .name-traco{
+        margin-left: 40%;
       }
     }
   .org{
