--- a/css/index-css.css
+++ b/css/index-css.css
@@ -264,7 +264,7 @@
  }
  .text-1 .faca-mais-text{
   width: 60%;
-  margin-left: 7rem;
+  margin-left: 10rem;
   padding: 0 50px;
  }
  .text-1 .faca-mais-text h3{
@@ -284,14 +284,14 @@
  }
   @media(max-width: 720px) {
    .text-1 .container-text-1{
-    display: block;
+    flex-direction: column-reverse;
     align-items: center;
     position: relative;
     margin-top: 5rem;
     }
     .text-1 .faca-mais-text{
     width:70%;
-    margin-left: 50px;
+    margin-left: -40px;
     padding: 30px 0px;
     }
     .text-1 .faca-mais-text h3{
@@ -303,12 +303,63 @@
       font-size: 16px;
      }
      .text-1 .faca-mais-img img{
-      margin-left: 50px;
+      margin-left: -85px;
      }
  }
 /* ------------------- OFF TEXTO 1 ------------------- */
 
-
+/* ------------------- TEXTO 2 ------------------- */
+.text-2 .container-text-2{
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 5rem;
+ }
+ .text-2 .faca-mais-text-2{
+  width: 50%;
+  padding: 0 40px;
+ }
+ .text-2 .faca-mais-text-2 h3{
+  font-size: 50px;
+  color: #013f8f;
+ }
+ .text-2 .faca-mais-text-2 p{
+  margin: 10px 0 10px 5px;
+  font-size: 18px;
+  color: #727070;
+ }
+ .text-2 .faca-mais-img-2{
+  width: 30%;
+  margin-left: 7rem;
+ }
+ .text-2 .faca-mais-img-2 img{
+  margin-left: 2rem;
+ }
+  @media(max-width: 720px) {
+   .text-2 .container-text-2{
+    display: block;
+    align-items: center;
+    position: relative;
+    margin-top: 5rem;
+    }
+    .text-2 .faca-mais-text-2{
+    width:70%;
+    margin-left: 50px;
+    padding: 30px 0px;
+    }
+    .text-2 .faca-mais-text-2 h3{
+      font-size: 30px;
+      color: #013f8f;
+     }
+     .text-2 .faca-mais-text-2 p{
+      margin: 10px 0 0px 5px;
+      font-size: 16px;
+     }
+     .text-2 .faca-mais-img-2 img{
+      margin-left: -65px;
+     }
+ }
+/* ------------------- OFF TEXTO 2 ------------------- */
 
 
 
