--- a/css/index-css.css
+++ b/css/index-css.css
@@ -362,7 +362,7 @@
 /* ------------------- OFF TEXTO 2 ------------------- */
 
 /* -------------------PROPOSTA PEDAGÓGICA------------------- */
-  .slide-container{
+  .slide-background{
     margin-top: 3rem;
     width: 100%;
     padding: 6rem 0rem 5rem 0rem;
@@ -374,7 +374,7 @@
     background-size: cover;
     background-attachment: fixed;
   }
-  .container-text{
+  .background-text{
     font-size: 25px;
     color: #fff;
   }
@@ -385,6 +385,68 @@
     border: 2px solid #d6d3d3;
     margin-bottom: 20px;
   }
+
+  .slide-container{
+    width: 90%;
+    height: 100%;
+  }
+  .slide-content{
+    width: 90%;
+    display: flex;
+   }
+   .card {
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    position: relative;
+    border-radius: 50px;
+    overflow: hidden;
+  }
+  .card img {
+    width: 20rem;
+    height: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s;
+  }
+  .card:hover img {
+    opacity: 0.8;
+  }
+  .card .content {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    transform: translateY(55%);
+    transition: transform 0.3s;
+  }
+  .card:hover .content {
+    transform: translateY(0);
+  }
+  .card h2 {
+    text-align: center;
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .card .description {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 16px;
+  }
+  .btn{
+    margin-top: 10px;
+    background-color: #4f9cf9;
+    color: #ffffff;
+    padding: 15px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    transition: 0.3s;
+   }
+   .btn:hover{
+    background-color: #3580db;
+   }
 /* -------------------OFF PROPOSTA PEDAGÓGICA------------------- */
 
 
@@ -401,6 +463,7 @@
     width: 100%;
     margin-top: 1rem;
     padding: 6rem 0rem 5rem 0rem;
+
     text-align: center;
     align-items: center;
     justify-content: center;
