--- a/css/index-css.css
+++ b/css/index-css.css
@@ -363,7 +363,7 @@
 
 /* -------------------PROPOSTA PEDAGÓGICA------------------- */
   .slide-background{
-    margin-top: 3rem;
+    margin-top: 6rem;
     width: 100%;
     padding: 6rem 0rem 5rem 0rem;
     text-align: center;
@@ -387,22 +387,21 @@
   }
 
   .slide-container{
-    width: 90%;
+    width: 100%;
     height: 100%;
   }
-  .slide-content{
-    width: 90%;
+  .card-wrapper{
     display: flex;
    }
    .card {
-    margin-bottom: 2rem;
-    margin-left: 1rem;
+    margin: 5rem 1rem 3rem 1rem;
+    width: 100%;
     position: relative;
     border-radius: 50px;
     overflow: hidden;
   }
   .card img {
-    width: 20rem;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: opacity 0.3s;
@@ -415,7 +414,7 @@
     bottom: 0;
     width: 100%;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(41, 40, 40, 0.7);
     color: #fff;
     transform: translateY(55%);
     transition: transform 0.3s;
