--- a/css/index-css.css
+++ b/css/index-css.css
@@ -394,8 +394,9 @@
     display: flex;
    }
    .card {
-    margin: 5rem 1rem 3rem 1rem;
+    margin: 5rem 2rem 3rem 2rem;
     width: 100%;
+    height: 19rem;
     position: relative;
     border-radius: 50px;
     overflow: hidden;
@@ -414,7 +415,7 @@
     bottom: 0;
     width: 100%;
     padding: 10px;
-    background-color: rgba(41, 40, 40, 0.7);
+    background-color: rgba(46, 45, 45, 0.7);
     color: #fff;
     transform: translateY(55%);
     transition: transform 0.3s;
@@ -425,7 +426,7 @@
   .card h2 {
     text-align: center;
     margin: 0;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
   }
   .card .description {
@@ -445,6 +446,36 @@
    }
    .btn:hover{
     background-color: #3580db;
+   }
+
+   @media(max-width: 720px){
+    .card .content {
+      transform: translateY(0%);
+    }
+    .card-wrapper{
+      flex-direction: column;
+      margin-left: 5rem;
+     }
+     .card {
+      margin: 5rem 0rem 0rem 0rem;
+      width: 70%;
+      position: relative;
+      border-radius: 50px;
+      overflow: hidden;
+    }
+    .card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: opacity 0.3s;
+    }
+    .slide-traco{
+      margin-left: 20%;
+      margin-top: 0.5rem;
+      width: 15rem;
+      border: 2px solid #d6d3d3;
+      margin-bottom: 20px;
+    }
    }
 /* -------------------OFF PROPOSTA PEDAGÓGICA------------------- */
 
