--- a/css/index-css.css
+++ b/css/index-css.css
@@ -280,6 +280,7 @@
   width: 50%;
  }
  .text-1 .faca-mais-img img{
+  user-select: none;
   margin-left: 2rem;
  }
   @media(max-width: 720px) {
@@ -333,6 +334,7 @@
   margin-left: 10.5rem;
  }
  .text-2 .faca-mais-img-2 img{
+  user-select: none;
   margin-left: 2rem;
  }
   @media(max-width: 720px) {
@@ -415,6 +417,7 @@
     bottom: 0;
     width: 100%;
     padding: 10px;
+    box-shadow: 10em yellow;
     background-color: rgba(46, 45, 45, 0.7);
     color: #fff;
     transform: translateY(55%);
