--- a/css/index-css.css
+++ b/css/index-css.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family= Inter:wght@600 & display = swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -367,7 +367,7 @@
   .slide-background{
     margin-top: 6rem;
     width: 100%;
-    padding: 6rem 0rem 5rem 0rem;
+    padding: 6rem 0rem 2rem 0rem;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -388,56 +388,70 @@
     margin-bottom: 20px;
   }
 
-  .slide-container{
-    width: 100%;
-    height: 100%;
-  }
-  .card-wrapper{
+  .container-card-slide{
+    margin-top: -3rem;
     display: flex;
-   }
-   .card {
-    margin: 5rem 2rem 3rem 2rem;
+    align-items: center;
+    justify-content: center;
+    padding: 0 35px;
+    min-height: 100vh;
+  }
+  .wrapper{
+    max-width: 1100px;
     width: 100%;
-    height: 19rem;
     position: relative;
-    border-radius: 50px;
+  }
+  .wrapper .carousel{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 12px);
+    gap: 16px;
     overflow: hidden;
   }
-  .card img {
+  .carousel .card{
+    height: 342px;
+    list-style: none;
+    border-radius: 0px;
+    background-color: #fff;
+    display: flex;
+    cursor: pointer;
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .card img{
     width: 100%;
     height: 100%;
+    transform: translateY(15%);
     object-fit: cover;
+    user-select: none;
     transition: opacity 0.3s;
   }
   .card:hover img {
     opacity: 0.8;
   }
-  .card .content {
-    position: absolute;
+  .content {
+    position: relative;
+    border-radius: 8px;
     bottom: 0;
-    width: 100%;
-    padding: 10px;
-    background-color: rgba(46, 45, 45, 0.7);
+    width: 109.1%;
+    padding: 8px;
+    background-color: rgba(59, 58, 58, 0.7);
     color: #fff;
-    transform: translateY(55%);
+    transform: translateY(25%);
     transition: transform 0.3s;
   }
   .card:hover .content {
-    transform: translateY(0);
+    transform: translateY(-30%);
   }
-  .card h2 {
-    text-align: center;
-    margin: 0;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  .card .description {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 16px;
+  .content h2{
+    margin: 5px 0 15px 0;
+    font-size: 22px;
+    text-transform: uppercase;
   }
   .btn{
-    margin-top: 10px;
+    margin-bottom: 15px;
     background-color: #4f9cf9;
     color: #ffffff;
     padding: 15px 20px;
@@ -449,36 +463,55 @@
    .btn:hover{
     background-color: #3580db;
    }
-
-   @media(max-width: 720px){
-    .card .content {
-      transform: translateY(0%);
-    }
-    .card-wrapper{
-      flex-direction: column;
-      margin-left: 5rem;
-     }
-     .card {
-      margin: 5rem 0rem 0rem 0rem;
-      width: 70%;
-      position: relative;
-      border-radius: 50px;
-      overflow: hidden;
-    }
-    .card img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: opacity 0.3s;
-    }
-    .slide-traco{
-      margin-left: 20%;
-      margin-top: 0.5rem;
-      width: 15rem;
-      border: 2px solid #d6d3d3;
-      margin-bottom: 20px;
-    }
+   .carousel::-webkit-scrollbar {
+    display: none;
+  }
+  .carousel.no-transition {
+    scroll-behavior: auto;
+  }
+  .carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging .card {
+    cursor: grab;
+    user-select: none;
+  }
+   .wrapper i{
+    height: 50px;
+    width: 50px;
+    background: #fff;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    font-size: 1.25rem;
+    transform: translateY(-50%);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .23);
    }
+   .wrapper i:active{
+    transform: translateY(-50%) scale(0.85);
+  }
+   .wrapper i:first-child{
+    left: -35px;
+   }
+   .wrapper i:last-child{
+    right: -35px;
+   }
+
+     @media(max-width:900px) {
+       .wrapper .carousel{
+        grid-auto-columns: calc((100% / 2) - 9px);
+       }
+     }
+     @media(max-width:600px) {
+      .wrapper .carousel{
+       grid-auto-columns: 100%;
+      }
+    }
+
 /* -------------------OFF PROPOSTA PEDAGÓGICA------------------- */
 
 
