--- a/css/index-css.css
+++ b/css/index-css.css
@@ -8,7 +8,7 @@
     font-family: 'Inter', sans-serif;
 }
 /* -------------------AVISO COOKIES------------------- */
-.cookieConsentContainer{border-radius:20px;;z-index:999;width:350px;min-height:20px;box-sizing:border-box;padding:30px 30px 30px 30px;background:#232323;overflow:hidden;position:fixed;bottom:30px;right:30px;display:none}.cookieConsentContainer .cookieTitle a{font-family:OpenSans,arial,sans-serif;color:#fff;font-size:22px;line-height:20px;display:block}.cookieConsentContainer .cookieDesc p{margin:0;padding:0;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:13px;line-height:20px;display:block;margin-top:10px}.cookieConsentContainer .cookieDesc a{font-family:OpenSans,arial,sans-serif;color:#fff;text-decoration:underline}.cookieConsentContainer .cookieButton a{border-radius:20px;display:inline-block;font-family:OpenSans,arial,sans-serif;color:#fff;font-size:14px;font-weight:700;margin-top:14px;background:#000;box-sizing:border-box;padding:15px 24px;text-align:center;transition:background .3s}.cookieConsentContainer .cookieButton a:hover{cursor:pointer;background:#3e9b67}@media (max-width:980px){.cookieConsentContainer{border-radius:0;bottom:0!important;left:0!important;width:100%!important}}
+
 /* -------------------OFF AVISO COOKIES------------------- */
 
 /* -------------------CABEÇALHO DO SITE------------------- */
@@ -389,42 +389,90 @@
   }
 
   .container-card-slide{
-    margin-top: -3rem;
+    margin-top: -5rem;
     display: flex;
+    padding: 0 35px;
     align-items: center;
     justify-content: center;
-    padding: 0 35px;
     min-height: 100vh;
   }
-  .wrapper{
+  .wrapper {
     max-width: 1100px;
     width: 100%;
     position: relative;
+  }
+  .wrapper i {
+    top: 50%;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+  }
+  .wrapper i:active{
+    transform: translateY(-50%) scale(0.85);
+  }
+  .wrapper i:first-child{
+    left: -22px;
+    z-index: 10;
+  }
+  .wrapper i:last-child{
+    right: -22px;
   }
   .wrapper .carousel{
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: calc((100% / 3) - 12px);
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
     gap: 16px;
-    overflow: hidden;
+    border-radius: 8px;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
   }
-  .carousel .card{
-    height: 342px;
-    list-style: none;
-    border-radius: 0px;
-    background-color: #fff;
+  .carousel::-webkit-scrollbar {
+    display: none;
+  }
+  .carousel.no-transition {
+    scroll-behavior: auto;
+  }
+  .carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging .card {
+    cursor: grab;
+    user-select: none;
+  }
+  .carousel :where(.card, .img) {
     display: flex;
-    cursor: pointer;
-    padding: 15px;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
+    align-items: center;
   }
-  .card img{
+  .carousel .card {
+    scroll-snap-align: start;
+    height: 350px;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    overflow: hidden;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
+  }
+  .carousel .card img {
+    height: 320px;
     width: 100%;
-    height: 100%;
-    transform: translateY(15%);
     object-fit: cover;
+    border: 4px solid #fff;
+    transform: translateY(20%);
     user-select: none;
     transition: opacity 0.3s;
   }
@@ -434,19 +482,21 @@
   .content {
     position: relative;
     border-radius: 8px;
+    height: 220px;
     bottom: 0;
-    width: 109.1%;
+    width: 100%;
     padding: 8px;
     background-color: rgba(59, 58, 58, 0.7);
     color: #fff;
-    transform: translateY(25%);
+    transform: translateY(20%);
     transition: transform 0.3s;
   }
   .card:hover .content {
     transform: translateY(-30%);
   }
   .content h2{
-    margin: 5px 0 15px 0;
+    margin: 0px 0 0px 0;
+    transform: translateY(-70%);
     font-size: 22px;
     text-transform: uppercase;
   }
@@ -463,55 +513,21 @@
    .btn:hover{
     background-color: #3580db;
    }
-   .carousel::-webkit-scrollbar {
-    display: none;
+  .carousel .card h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
   }
-  .carousel.no-transition {
-    scroll-behavior: auto;
-  }
-  .carousel.dragging {
-    scroll-snap-type: none;
-    scroll-behavior: auto;
-  }
-  .carousel.dragging .card {
-    cursor: grab;
-    user-select: none;
-  }
-   .wrapper i{
-    height: 50px;
-    width: 50px;
-    background: #fff;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    font-size: 1.25rem;
-    transform: translateY(-50%);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, .23);
-   }
-   .wrapper i:active{
-    transform: translateY(-50%) scale(0.85);
-  }
-   .wrapper i:first-child{
-    left: -35px;
-   }
-   .wrapper i:last-child{
-    right: -35px;
-   }
-
-     @media(max-width:900px) {
-       .wrapper .carousel{
-        grid-auto-columns: calc((100% / 2) - 9px);
-       }
-     }
-     @media(max-width:600px) {
-      .wrapper .carousel{
-       grid-auto-columns: 100%;
-      }
+  @media screen and (max-width: 900px) {
+    .wrapper .carousel {
+      grid-auto-columns: calc((100% / 2) - 9px);
     }
-
+  }
+  @media screen and (max-width: 600px) {
+    .wrapper .carousel {
+      grid-auto-columns: 100%;
+    }
+  }
 /* -------------------OFF PROPOSTA PEDAGÓGICA------------------- */
 
 
