--- a/css/index-css.css
+++ b/css/index-css.css
@@ -390,6 +390,7 @@
 
   .container-card-slide{
     margin-top: -5rem;
+    margin-bottom: -3rem;
     display: flex;
     padding: 0 35px;
     align-items: center;
@@ -411,6 +412,7 @@
     text-align: center;
     line-height: 50px;
     background: #fff;
+    color: #004aad;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.23);
     transform: translateY(-50%);
@@ -465,7 +467,7 @@
     overflow: hidden;
     padding-bottom: 15px;
     flex-direction: column;
-    border-radius: 8px;
+    border-radius: 25px;
   }
   .carousel .card img {
     height: 320px;
@@ -481,12 +483,11 @@
   }
   .content {
     position: relative;
-    border-radius: 8px;
     height: 220px;
     bottom: 0;
     width: 100%;
     padding: 8px;
-    background-color: rgba(59, 58, 58, 0.7);
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(109, 109, 109, 0.774));
     color: #fff;
     transform: translateY(20%);
     transition: transform 0.3s;
@@ -495,14 +496,17 @@
     transform: translateY(-30%);
   }
   .content h2{
-    margin: 0px 0 0px 0;
     transform: translateY(-70%);
     font-size: 22px;
     text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.56rem;
+    margin: 30px 0 0px 0;
+    color: #0b17c0;
   }
   .btn{
-    margin-bottom: 15px;
-    background-color: #4f9cf9;
+    margin-bottom: 25px;
+    background-color: #004aad;
     color: #ffffff;
     padding: 15px 20px;
     border-radius: 10px;
@@ -513,11 +517,6 @@
    .btn:hover{
     background-color: #3580db;
    }
-  .carousel .card h2 {
-    font-weight: 500;
-    font-size: 1.56rem;
-    margin: 30px 0 5px;
-  }
   @media screen and (max-width: 900px) {
     .wrapper .carousel {
       grid-auto-columns: calc((100% / 2) - 9px);
