--- a/css/index-css.css
+++ b/css/index-css.css
@@ -237,13 +237,13 @@
         padding: 0 1px;
       }
       .banner .banner-text h1{
-        font-size: 60px;
+        font-size: 55px;
         margin-top: 80px;
         color: #ffffff;
         text-align: center;
       }
       .banner .banner-text p{
-        font-size: 18px;
+        font-size: 16px;
         color: #ffffffb7;
         font-weight: 350;
         text-transform: uppercase;
@@ -387,7 +387,12 @@
     border: 2px solid #d6d3d3;
     margin-bottom: 20px;
   }
-
+  @media(max-width: 720px){
+    .slide-traco{
+      margin-left: 21%;
+      width: 12rem;
+    }
+  }
   .container-card-slide{
     margin-top: -5rem;
     margin-bottom: -3rem;
