--- a/css/index-css.css
+++ b/css/index-css.css
@@ -358,7 +358,7 @@
       font-size: 16px;
      }
      .text-2 .faca-mais-img-2 img{
-      margin-left: -65px;
+      margin-left: -40px;
      }
  }
 /* ------------------- OFF TEXTO 2 ------------------- */
@@ -388,8 +388,12 @@
     margin-bottom: 20px;
   }
   @media(max-width: 720px){
+    .background-text{
+      font-size: 22px;
+      color: #fff;
+    }
     .slide-traco{
-      margin-left: 21%;
+      margin-left: 23%;
       width: 12rem;
     }
   }
