--- a/css/index-css.css
+++ b/css/index-css.css
@@ -41,7 +41,7 @@
     .topo-menu .info-menu span{
       margin-left: 8px;
     }
-      @media(max-width: 1000px){
+      @media(max-width: 1100px){
         .topo-menu .info-menu{
           display: flex;
           padding: 14px;
@@ -56,26 +56,58 @@
           text-transform: uppercase;
         }
       }
-      @media(max-width: 800px){
+      @media(max-width: 600px){
         .topo-menu .info-menu{
-          display: flex;
           padding: 14px;
-          margin-left: 6px;
-          font-size: 9px;
-          color: #fff;
+          margin-left: 4px;
+          font-size: 8px;
         }
         .topo-menu .info-menu p{
           font-size: 9px;
           margin-top: 2.8px;
-          font-weight: bold;
-          text-transform: uppercase;
         }
         .topo-menu .info-menu img{
           margin-left: 12px;
         }
         .topo-menu .info-menu span{
           margin-left: 5px;
-          margin-top: 2px;
+          margin-top: 3.45px;
+        }
+      }
+      @media(max-width: 400px){
+        .topo-menu .info-menu{
+          padding: 14px;
+          margin-left: 4px;
+          font-size: 9px;
+        }
+        .topo-menu .info-menu p{
+          font-size: 9px;
+          margin-top: 2.8px;
+        }
+        .topo-menu .info-menu img{
+          margin-left: 12px;
+        }
+        .topo-menu .info-menu span{
+          margin-left: 5px;
+          margin-top: 3.4px;
+        }
+      }
+      @media(max-width: 350px){
+        .topo-menu .info-menu{
+          padding: 14px;
+          margin-left: 4px;
+          font-size: 7px;
+        }
+        .topo-menu .info-menu p{
+          font-size: 8px;
+          margin-top: 2.8px;
+        }
+        .topo-menu .info-menu img{
+          margin-left: 12px;
+        }
+        .topo-menu .info-menu span{
+          margin-left: 5px;
+          margin-top: 3.8px;
         }
       }
   /* -------------------INFORMAÇÕES DE AJUDA------------------- */
@@ -250,6 +282,16 @@
         margin: 12px 0;
       }
      }
+     @media(max-width: 350px){
+      .banner .banner-text h1{
+        font-size: 40px;
+        margin-top: 80px;
+      }
+      .banner .banner-text p{
+        font-size: 12px;
+        margin: 12px 0;
+      }
+     }
   /* -------------------OFF BANNER------------------- */
 
 /* -------------------OFF CABEÇALHO DO SITE------------------- */
@@ -285,18 +327,20 @@
  }
  .text-1 .faca-mais-img img{
   user-select: none;
+  width: 365px;
   margin-right: 5rem;
  }
-  @media(max-width: 720px) {
-   .text-1 .container-text-1{
+ @media(max-width: 600px) {
+  .text-1 .container-text-1{
     flex-direction: column-reverse;
     align-items: center;
     position: relative;
-    margin-top: 5rem;
+    margin-top: 3rem;
     }
     .text-1 .faca-mais-text{
     width:70%;
-    padding: 30px 0px;
+    margin-left: -6px;
+    padding: 10px 0px;
     }
     .text-1 .faca-mais-text h3{
       font-size: 30px;
@@ -304,12 +348,78 @@
      }
      .text-1 .faca-mais-text p{
       margin: 10px 0 0px 5px;
-      font-size: 16px;
+      font-size: 18px;
+     }
+     .text-1 .faca-mais-img{
+      width: 80%;
      }
      .text-1 .faca-mais-img img{
-      margin-left: -85px;
+      padding-left: 30px;
+      margin-left: -30px;
+      width: 280px;
+      margin-right: 0rem;
      }
  }
+  @media(max-width: 400px) {
+    .text-1 .container-text-1{
+      flex-direction: column-reverse;
+      align-items: center;
+      position: relative;
+      margin-top: 3rem;
+      }
+      .text-1 .faca-mais-text{
+      width:70%;
+      margin-left: -6px;
+      padding: 10px 0px;
+      }
+      .text-1 .faca-mais-text h3{
+        font-size: 30px;
+        color: #013f8f;
+       }
+       .text-1 .faca-mais-text p{
+        margin: 10px 0 0px 5px;
+        font-size: 18px;
+       }
+       .text-1 .faca-mais-img{
+        width: 80%;
+       }
+       .text-1 .faca-mais-img img{
+        padding-left: 30px;
+        margin-left: -30px;
+        width: 260px;
+        margin-right: 0rem;
+       }
+ }
+ @media(max-width: 350px) {
+  .text-1 .container-text-1{
+    flex-direction: column-reverse;
+    align-items: center;
+    position: relative;
+    margin-top: 3rem;
+    }
+    .text-1 .faca-mais-text{
+    width:70%;
+    margin-left: -6px;
+    padding: 10px 0px;
+    }
+    .text-1 .faca-mais-text h3{
+      font-size: 30px;
+      color: #013f8f;
+     }
+     .text-1 .faca-mais-text p{
+      margin: 10px 0 0px 5px;
+      font-size: 18px;
+     }
+     .text-1 .faca-mais-img{
+      width: 100%;
+     }
+     .text-1 .faca-mais-img img{
+      padding-left: 10px;
+      margin-left: -10px;
+      width: 225px;
+      margin-right: 0rem;
+     }
+}
 /* ------------------- OFF TEXTO 1 ------------------- */
 
 /* ------------------- TEXTO 2 ------------------- */
@@ -339,10 +449,11 @@
  }
  .text-2 .faca-mais-img-2 img{
   user-select: none;
+  width: 365px;
   margin-left: 2rem;
  }
-  @media(max-width: 720px) {
-   .text-2 .container-text-2{
+ @media(max-width: 600px){
+  .text-2 .container-text-2{
     display: block;
     align-items: center;
     position: relative;
@@ -350,7 +461,7 @@
     }
     .text-2 .faca-mais-text-2{
     width:70%;
-    margin-left: 50px;
+    margin-left: 60px;
     padding: 30px 0px;
     }
     .text-2 .faca-mais-text-2 h3{
@@ -359,10 +470,52 @@
      }
      .text-2 .faca-mais-text-2 p{
       margin: 10px 0 0px 5px;
-      font-size: 16px;
+      font-size: 18px;
      }
      .text-2 .faca-mais-img-2 img{
-      margin-left: -180px;
+       padding-left: 10px;
+       margin-left: -95px;
+       width: 280px;
+      }
+ }
+ @media(max-width: 400px){
+  .text-2 .faca-mais-text-2{
+    width:70%;
+    margin-left: 55px;
+    padding: 10px 0px;
+  }
+  .text-2 .faca-mais-text-2 h3{
+    font-size: 30px;
+    color: #013f8f;
+   }
+   .text-2 .faca-mais-text-2 p{
+    margin: 10px 0 0px 5px;
+    font-size: 18px;
+   }
+   .text-2 .faca-mais-img-2 img{
+    padding-left: 10px;
+    margin-left: -85px;
+    width: 225px;
+   }
+ }
+ @media(max-width: 350px) {
+    .text-2 .faca-mais-text-2{
+      width:70%;
+      margin-left: 45px;
+      padding: 10px 0px;
+    }
+    .text-2 .faca-mais-text-2 h3{
+      font-size: 30px;
+      color: #013f8f;
+     }
+     .text-2 .faca-mais-text-2 p{
+      margin: 10px 0 0px 5px;
+      font-size: 18px;
+     }
+     .text-2 .faca-mais-img-2 img{
+      padding-left: 10px;
+      margin-left: -120px;
+      width: 225px;
      }
  }
 /* ------------------- OFF TEXTO 2 ------------------- */
@@ -398,7 +551,7 @@
       color: #fff;
     }
     .slide-traco{
-      left: 25%;
+      left: 0%;
     }
   }
   .container-card-slide{
